/*
 * $Id: ChangeLog,v 1.367 2007-07-01 19:37:03 guerra000 Exp $
 */
/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2007-07-01 14:33 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  + include/i_scroll.ch
  * include/oohg.ch
    + @...SCROLL command added.
  * include/i_window.ch
  * source/h_internal.prg
  * source/h_window.prg
    ! Fixed virtual width for "internal window" controls.
    + TForm's ON RESTORE clause added.
  * source/h_scroll.prg
    * Moves window's controls while scrollbar is tracked.

2007-06-30 23:38 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * include/i_image.ch
    + NORESIZE clause added.
  * source/c_image.c
  * source/h_button.prg
  * source/h_checkbox.prg
  * source/h_image.prg
    * Unified image methods.
    * TImage can contain an image with a different size from control.
    * TImage contains a copy of original HBITMAP image (for further
      resize).

2007-06-28 18:49 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/c_image.c
    ! OLE image is not mandatory resized.
  * source/c_controlmisc.c
    ! Only creates ImageList (IMGELIST_INIT) if any image file is valid.
  * source/h_controlmisc.prg
    ! Checks for valid ::ImageList creation.

  * source/h_print.prg
    ! Warning removed.

2007-06-24 23:36 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * include/i_altsyntax.ch
  * include/i_media.ch
  * include/i_windefs.ch
  * source/c_media.c
  * source/h_media.prg
    * Some ooHG-style implementations for TPlayer and TAnimateBox controls.

2007-06-09 17:54 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_toolbar.prg
    ! Fixed for not allow ALT-x accelerator on disabled buttons.
  * source/h_windows.prg
    + TWindow:Style SETGET method added.
  * source/h_textarray.prg
  * include/i_textarray.ch
    + NOTABSTOP and DISABLED clauses added.
